--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "mysql2": "^3.6.0"
@@ -10,7 +11,6 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
